Fix home page on mobile by removing image at width below 768px. Improve circle button scaling

--- a/docs/_sass/layout/_services.scss
+++ b/docs/_sass/layout/_services.scss
@@ -9,7 +9,7 @@
 }
 
 .service-code pre {
-  display: inline-block;
+  //display: inline-block;
   text-align: left;
   background-color: #eee;
   padding-left: 2em;
